# routes/imageRoutes.go
@@ -13,4 +13,5 @@ func RegisterImageRoutes(app *fiber.App, db *sql.DB) {
 
 	// Rota para obter a imagem de um produto específico
 	imageGroup.Get("/:product_id", controllers.GetImageOfProduct(db))
+	imageGroup.Post("/", controllers.CreateImage(db))
 }
